selectors and event listeners

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <h1>Password Generator</h1>
         <h2 class="password-display">%4@#54KHyrv@~1{ojY5 <img id="eye-password" src="images/eye.png" alt=""><img
                 id="eye-text" src="images/eye-hidden.png" alt=""></h2>
-        <form action="" class="form">
+        <form id="form" action="" class="form">
             <label for="charAmount">
                 No. Of Characters
             </label>
             <div class="char-container">
                 <input id="char-range" type="range" min="1" max="50" value="12">
-                <input id="char-num" class="char-num" type="number" min="1" max="50" value="12">
+                <input id="char-amount" class="char-amount" type="number" min="1" max="50" value="12">
             </div>
 
             <label for="uppercase">Uppercase</label>
