password field front end updated

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main class="container">
         <img src="images/logo.png" alt="">
         <h1>Password Generator</h1>
-        <h2 id="password-display" class="password-display">%4@#54KHyrv@~1{ojY5 <img id="eye-password"
-                src="images/eye.png" alt=""><img id="eye-text" src="images/eye-hidden.png" alt=""></h2>
+        <input id="password-display" class="password-display" type="password" value="%4@#54KHyrv@~1{ojY5" /> <img
+            id="eye-password" src="images/eye.png" alt=""><img id="eye-text" src="images/eye-hidden.png" alt="">
         <form id="form" action="" class="form">
             <label for="charAmount">
                 No. Of Characters
