weak, medium, strong frontend

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <h1>Password Generator</h1>
         <input id="password-display" class="password-display" type="password" value="%4@#54KHyrv@~1{ojY5" /> <img
             id="eye-password" src="images/eye.png" alt=""><img id="eye-text" src="images/eye-hidden.png" alt="">
+        <p id="weak">Weak</p>
+        <p id="medium">Medium</p>
+        <p id="strong">Strong</p>
+
         <form id="form" action="" class="form">
             <label for="charAmount">
                 No. Of Characters
