copy section frontend done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main class="container">
         <img src="images/logo.png" alt="">
         <h1>Password Generator</h1>
+        <p id="copy">Copy</p>
         <input id="password-display" class="password-display" type="password" value="%4@#54KHyrv@~1{ojY5" /> <img
             id="eye-password" src="images/eye.png" alt=""><img id="eye-text" src="images/eye-hidden.png" alt="">
         <p id="weak">Weak</p>
