SUBMIT validation functionality

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <img src="images/logo.png" alt="">
         <h1>Password Generator</h1>
         <p id="copy">Copy</p>
-        <input id="password-display" class="password-display" type="password" value="%4@#54KHyrv@~1{ojY5" /> <img
-            id="eye-password" src="images/eye.png" alt=""><img id="eye-text" src="images/eye-hidden.png" alt="">
+        <input id="password-display" class="password-display" type="password" value="" /> <img id="eye-password"
+            src="images/eye.png" alt=""><img id="eye-text" src="images/eye-hidden.png" alt="">
         <p id="weak">Weak</p>
         <p id="medium">Medium</p>
         <p id="strong">Strong</p>
