password status and setDefault issues

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <p id="copy">Copy</p>
         <input id="password-display" class="password-display" type="password" value="" /> <img id="eye-password"
             src="images/eye.png" alt=""><img id="eye-text" src="images/eye-hidden.png" alt="">
+        <p id="status-password">Empty</p>
         <p id="weak">Weak</p>
         <p id="medium">Medium</p>
         <p id="strong">Strong</p>
 
-        <form id="form" action="" class="form">
+        <form autocomplete="off" id="form" action="" class="form">
             <label for="charAmount">
                 Range Of Characters
             </label>
