weak mode issue fixed and updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <main class="container">
-        <img src="images/logo.png" alt="">
+        <a href="https://bdmostafa.github.io/password-generator/index.html"><img src="images/logo.png" alt=""></a>
         <h1>Password Generator</h1>
         <p id="copy">Copy</p>
         <input id="password-display" class="password-display" type="password" value="" /> <img id="eye-password"
